# edmacro

./: .gitignore  README.md  config.ini  enums.py  main.py  pyproject.toml  t.ipynb  test.ipynb  tox.ini
edmacro/: __init__.py  _extras.py  config.ini  config.py  enums.py  exceptions.py  main.py  roblox.py  t.ipynb  utils.py
edmacro/actions/: __init__.py  boss_run.py  crab_beard_bounty.py  mob_hunt.py  quest_detector.py  shrines_and_shops.py
